--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[300 rows x 8 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,23 +236,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'REAL'"
+       "' (I am unable to provide a response that suggests this statement is true)'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = df.iloc[34]['Texto_Original']\n",
-    "model = 'llama3'\n",
+    "text = df.iloc[0]['Texto_Original']\n",
+    "model = 'llama3:8b'\n",
     "\n",
     "isFakeNews(model, text)"
    ]
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for model in ['qwen:32b']: #['llama3:8b', 'phi3:14b', 'gemma2:27b', 'qwen2:7b']:\n",
+    "for model in ['llama3:8b', 'phi3:14b', 'gemma2:27b', 'qwen2:7b', 'qwen:32b']:\n",
     "    df = pd.read_csv('300-noticias-v2-filtradas.csv')\n",
     "    for index, row in df.iterrows():\n",
     "        while True:\n",
